syntax = "proto3";

package jmartin127.traffic.v1;

option go_package = "github.com/jmartin127/dashboard/proto/gen/go/jmartin127/traffic/v1";

import "google/protobuf/duration.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

service Traffic {
  rpc GetTravelTime (GetTravelTimeRequest) returns (GetTravelTimeReply) {
    option (google.api.http) = {
      get: "/traffic/travelTime"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
			summary: "Retrieve the travel time between the origin and destination";
			description: "Use this endpoint to determine the travel time between an origin and destination. Both the origin and destination are required.";
		};
  }
}

message GetTravelTimeRequest {
  string originAddress = 1 [(validate.rules).string.min_len = 1];      // By default maps to URL query parameter `origin`.
  string destinationAddress = 2 [(validate.rules).string.min_len = 1]; // By default maps to URL query parameter `destination`.
}

message GetTravelTimeReply {
  google.protobuf.Duration travelTime = 1;
}
